--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "prettier": "^2.0.4",
+    "gulp-sass": "^4.1.0",
+    "prettier": "^2.0.5",
     "rename": "^1.0.4",
     "sort-css-media-queries": "^1.5.0",
     "gulp-concat": "^2.6.1",
     "gulp-terser": "^1.2.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "node-uuid": "1.4.8",
+    "minimatch": "3.0.4"
   },
   "dependencies": {},
   "scripts": {
